# QSmartAssistant

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ModelConfig.pri  ModelConfig_default.pri  README.md  lowpower_robot.pro  main.cpp  mqtt.cpp  mqtt.h  robot.cpp  robot.h
.github/workflows/: ubuntu.yml
Conversation/: CMakeLists.txt  conversation.cpp  conversation.h
Conversation/ASR/: ASRModel.h  duiliteasr.cpp  duiliteasr.h  funasr.cpp  funasr.h  sherpaasr.cpp  sherpaasr.h
Conversation/NLU/: baidunlu.cpp  baidunlu.h  nlumodel.h  rasanlu.cpp  rasanlu.h
Conversation/TTS/: TTSModel.h  sherpatts.cpp  sherpatts.h
Data/: default_config.json  openwakeup.py  plugin_order.txt  plugin_order_default.txt  start-rasa.sh  stop-rasa.sh  小云_zh.ppn
Data/rasa/: config.yml  domain.yml
Data/rasa/components/: custom_number_extractor.py  custom_time_extractor.py  lm_featurizer.py
Data/rasa/data/: nlu.yml
Data/rasa/data/jieba_userdict/: dict.txt
Data/rasa/data/nlu/: nlu.yml
Data/sherpa-onnx-streaming-paraformer-bilingual-zh-en/: install_model.txt  tokens.txt
Plugins/: CMakeLists.txt  IPluginHelper.h  Plugin.cpp  Plugin.h  PluginReflector.h  hass.cpp  hass.h  neteasemusic.cpp  neteasemusic.h  pluginmanager.cpp  pluginmanager.h  quitrobot.cpp  quitrobot.h  systeminfo.cpp  systeminfo.h  voicecontrol.cpp  voicecontrol.h  weather.cpp  weather.h
Plugins/chat/: CMakeLists.txt  chat.cpp  chat.h
Plugins/fallback/: CMakeLists.txt  Fallback.cpp  Fallback.h
Plugins/hass/: CMakeLists.txt  hass.cpp  hass.h
Plugins/neteasemusic/: CMakeLists.txt  neteasemusic.cpp  neteasemusic.h
Plugins/quitrobot/: CMakeLists.txt  quitrobot.cpp  quitrobot.h
Plugins/systeminfo/: CMakeLists.txt  systeminfo.cpp  systeminfo.h
Plugins/voicecontrol/: CMakeLists.txt  voicecontrol.cpp  voicecontrol.h
Plugins/weather/: CMakeLists.txt  weather.cpp  weather.h
Recorder/: audiobuffer.cpp  audiobuffer.h  audioplaylist.cpp  audioplaylist.h  player.cpp  player.h  recorder.cpp  recorder.h  recordhandler.cpp  recordhandler.h
Server/: CMakeLists.txt  server.cpp  server.h
Server/Web/: index.html
Server/Web/src/: base.js  bootstrap.css  scaffolding.css
Test/: TestPluginHelper.h  tst_sherpa.h
Utils/: AudioWriter.h  FileCache.h  LLM.h  LLMManager.cpp  LLMManager.h  LPcommonGlobal.h  ParsedIntent.h  Serializable.h  Serialize.cpp  Serialize.h  Template.h  Utils.h  WebLLM.cpp  WebLLM.h  config.cpp  config.h  wavfilereader.cpp  wavfilereader.h
Wakeup/: CMakeLists.txt  VadModel.h  WakeupModel.h  cobravad.cpp  cobravad.h  duilitevad.cpp  duilitewakeup.cpp  fvadmodel.cpp  koalaaudioprocess.cpp  openwakeup.cpp  openwakeup.h  porcupinewakeup.cpp  porcupinewakeup.h  silerovad.cpp  silerovad.h  speexaudioprocess.cpp  speexaudioprocess.h  wakeup.cpp  wakeup.h  webrtcprocessing.cpp
Wakeup/Process/: audioprocess.h  koalaaudioprocess.cpp  koalaaudioprocess.h  speexaudioprocess.cpp  speexaudioprocess.h  webrtcprocessing.cpp  webrtcprocessing.h
Wakeup/Vad/: VadModel.h  cobravad.cpp  duilitevad.cpp  duilitevad.h  fvadmodel.cpp  fvadmodel.h  sherpavad.cpp  sherpavad.h  silerovad.cpp  silerovad.h
Wakeup/Wakeup/: WakeupModel.h  azurewakeup.cpp  azurewakeup.h  duilitewakeup.cpp  duilitewakeup.h  openwakeonnx.cpp  openwakeonnx.h  openwakeup.cpp  openwakeup.h  porcupinewakeup.cpp  porcupinewakeup.h  sherpawakeup.cpp  sherpawakeup.h  snowboywakeup.cpp  snowboywakeup.h  snowboywrapper.cpp  snowboywrapper.h  wekwswakeup.cpp  wekwswakeup.h
cmake/: Findazurekws.cmake  Findbreakpad.cmake  Findcobra.cmake  Findduilite.cmake  Findfvad.cmake  Findkoala.cmake  Findonnxruntime.cmake  Findopenssl.cmake  Findporcupine.cmake  Findsherpa_onnx.cmake  Findsilerovad.cmake  Findsnowboy.cmake  Findspeexdsp.cmake  Findwebrtc.cmake
doc/: 安装.md  插件.md  配置.md
lib/fvad/lib/: libfvad.la
lib/fvad/lib/pkgconfig/: libfvad.pc
lib/netease_music/include/: module.h
lib/openwakeword/: test.py
lib/speexdsp/lib/: libspeexdsp.la
lib/speexdsp/lib/pkgconfig/: speexdsp.pc
lib/ssl/: readme.txt
scripts/: dump_symbols.sh  git-commit-msg.py  install_QCloudMusicApi.sh  install_breakpad.sh  install_neteasejs.sh  install_onnxruntime.sh  install_openssl.sh  install_qt.sh  install_rasa.sh  install_sherpa_onnx.sh  install_silero.sh  install_snowboy.sh  tag.txt
